--- a/class/index.html
+++ b/class/index.html
@@ -22,7 +22,6 @@
     </div>
     <input id="searchMain" class="searchField" type="text" placeholder="search names" oninput="searchNames('searchMain','name')"/>
     <div id="nameList"></div>
-    <p class="addNew" onclick="pop(['mainPop'],['newStudentPop'])">Add New Student</p>
 </div>
 
 <div id="att2Pop" class="pop">
@@ -748,27 +747,28 @@
 
 <div id="missionsPop" class="pop">
     <div id="asmvHeaderContainer">
-      <div class="asmvHeader" onclick="pop(['studentPop','missionsPop'],['missionVisibilityPop'])">ACTIVITY SHEETS</div>
-      <div class="secretButton"></div>
+      <div class="asmvHeader">ACTIVITY SHEETS</div>
+      <div class="secretButton" onclick="pop(['studentPop','missionsPop'],['missionVisibilityPop'])"></div>
       <div class="asmvHeader" onclick="toggleIncomplete()">MEMORY VERSES</div>
     </div>
     <div id="asmvPopContainer">
       <div id="asPop">
-        <div id="as30Pop" class="asButton w30" onclick="asPop(30)">Sword</div>
-        <div id="as29Pop" class="asButton w29" onclick="asPop(29)">Helmet</div>
-        <div id="as28Pop" class="asButton w28" onclick="asPop(28)">Shield</div>
-        <div id="as27Pop" class="asButton w27" onclick="asPop(27)">Shoes</div>
-        <div id="as26Pop" class="asButton w26" onclick="asPop(26)">Breastplate</div>
-        <div id="as25Pop" class="asButton w25" onclick="asPop(25)">Belt</div>
-        <div id="as24Pop" class="asButton w24" onclick="asPop(24)">Armor Intro</div>
-        <div id="as23Pop" class="asButton w23" onclick="asPop(23,6)">John 10-21 Review</div>
-        <div id="as22Pop" class="asButton w22" onclick="asPop(22)">John 21</div>
-        <div id="as21Pop" class="asButton w21" onclick="asPop(21)">John 20</div>
-        <div id="as20Pop" class="asButton w20" onclick="asPop(20)">John 19</div>
-        <div id="as19Pop" class="asButton w19" onclick="asPop(19)">John 18</div>
-        <div id="as18Pop" class="asButton w18" onclick="asPop(18)">John 17</div>
-        <div id="as17Pop" class="asButton w17" onclick="asPop(17)">John 16</div>
-        <div id="as16Pop" class="asButton w16" onclick="asPop(16,6)">John 14-15</div>
+        <div id="as31Pop" class="asButton w31" onclick="asPop(30)">Sword</div>
+        <div id="as30Pop" class="asButton w30" onclick="asPop(29)">Helmet</div>
+        <div id="as29Pop" class="asButton w29" onclick="asPop(28)">Shield</div>
+        <div id="as28Pop" class="asButton w28" onclick="asPop(27)">Shoes</div>
+        <div id="as27Pop" class="asButton w27" onclick="asPop(26)">Breastplate</div>
+        <div id="as26Pop" class="asButton w26" onclick="asPop(25)">Belt</div>
+        <div id="as25Pop" class="asButton w25" onclick="asPop(24)">Armor Intro</div>
+        <div id="as24Pop" class="asButton w24" onclick="asPop(23,6)">John 10-21 Review</div>
+        <div id="as23Pop" class="asButton w23" onclick="asPop(22)">John 21</div>
+        <div id="as22Pop" class="asButton w22" onclick="asPop(21)">John 20</div>
+        <div id="as21Pop" class="asButton w21" onclick="asPop(20)">John 19</div>
+        <div id="as20Pop" class="asButton w20" onclick="asPop(19)">John 18</div>
+        <div id="as19Pop" class="asButton w19" onclick="asPop(18)">John 17</div>
+        <div id="as18Pop" class="asButton w18" onclick="asPop(17)">John 16</div>
+        <div id="as17Pop" class="asButton w17" onclick="asPop(16,3)">John 15</div>
+        <div id="as16Pop" class="asButton w16" onclick="asPop(16,3)">John 14</div>
         <div id="as15Pop" class="asButton w15" onclick="asPop(15)">John 13</div>
         <div id="as14Pop" class="asButton w14" onclick="asPop(14)">John 12</div>
         <div id="as13Pop" class="asButton w13" onclick="asPop(13)">John 11</div>
@@ -787,21 +787,22 @@
         <div id="as0Pop" class="asButton w0" onclick="asPop(0)">Class Intro</div>
       </div>
       <div id="mvPop">
-        <div id="mv31Pop" class="asmvButtonFill w31"></div>
-        <div id="mv30Pop" class="mvButton w30" onclick="mvPop(30,30)"> Eph 6:18<br>"praying at"</div>
-        <div id="mv29Pop" class="mvButton w29" onclick="mvPop(29,29)"> Eph 6:17<br>"and take"</div>
-        <div id="mv28Pop" class="mvButton w28" onclick="mvPop(28,28)"> Eph 6:16<br>"In all"</div>
-        <div id="mv27Pop" class="mvButton w27" onclick="mvPop(27,27,4)"> Eph 6:14-15<br>"Stand therefore"</div>
-        <div id="mv26Pop" class="mvButton w26" onclick="mvPop(26,26)"> Eph 6:13<br>"Therefore take"</div>
-        <div id="mv25Pop" class="mvButton w25" onclick="mvPop(25,25,4)"> Eph 6:12<br>"For we"</div>
-        <div id="mv24Pop" class="mvButton w24" onclick="mvPop(24,24,4)"> Eph 6:10-11<br>"Finally, be"</div>
-        <div id="mv23Pop" class="mvButton w23" onclick="mvPop(23,23,6)">Rom 8:38-39<br>"For I"</div>
-        <div id="mv22Pop" class="mvButton w22" onclick="mvPop(22,22)">Rom 8:37<br>"No, in"</div>
-        <div id="mv21Pop" class="mvButton w21" onclick="mvPop(21,21)">Rom 8:36<br>"As it"</div>
-        <div id="mv20Pop" class="mvButton w20" onclick="mvPop(20,20)">Rom 8:35<br>"Who shall separate"</div>
-        <div id="mv19Pop" class="mvButton w19" onclick="mvPop(19,19,4)">Rom 8:34<br>"Who is"</div>
-        <div id="mv18Pop" class="mvButton w18" onclick="mvPop(18,18)">Rom 8:33<br>"Who shall bring"</div>
-        <div id="mv17Pop" class="mvButton w17" onclick="mvPop(17,17,7)">Rom 8:31-32<br>"What then"</div>
+        <div id="mv32Pop" class="asmvButtonFill w31"></div>
+        <div id="mv31Pop" class="mvButton w31" onclick="mvPop(30,30)"> Eph 6:18<br>"praying at"</div>
+        <div id="mv30Pop" class="mvButton w30" onclick="mvPop(29,29)"> Eph 6:17<br>"and take"</div>
+        <div id="mv29Pop" class="mvButton w29" onclick="mvPop(28,28)"> Eph 6:16<br>"In all"</div>
+        <div id="mv28Pop" class="mvButton w28" onclick="mvPop(27,27,4)"> Eph 6:14-15<br>"Stand therefore"</div>
+        <div id="mv27Pop" class="mvButton w27" onclick="mvPop(26,26)"> Eph 6:13<br>"Therefore take"</div>
+        <div id="mv26Pop" class="mvButton w26" onclick="mvPop(25,25,4)"> Eph 6:12<br>"For we"</div>
+        <div id="mv25Pop" class="mvButton w25" onclick="mvPop(24,24,4)"> Eph 6:10-11<br>"Finally, be"</div>
+        <div id="mv24Pop" class="mvButton w24" onclick="mvPop(23,23,6)">Rom 8:38-39<br>"For I"</div>
+        <div id="mv23Pop" class="mvButton w23" onclick="mvPop(22,22)">Rom 8:37<br>"No, in"</div>
+        <div id="mv22Pop" class="mvButton w22" onclick="mvPop(21,21)">Rom 8:36<br>"As it"</div>
+        <div id="mv21Pop" class="mvButton w21" onclick="mvPop(20,20)">Rom 8:35<br>"Who shall separate"</div>
+        <div id="mv20Pop" class="mvButton w20" onclick="mvPop(19,19,4)">Rom 8:34<br>"Who is"</div>
+        <div id="mv19Pop" class="mvButton w19" onclick="mvPop(18,18)">Rom 8:33<br>"Who shall bring"</div>
+        <div id="mv18Pop" class="mvButton w18" onclick="mvPop(17,17,4)">Rom 8:32<br>"What then"</div>
+        <div id="mv17Pop" class="mvButton w17" onclick="mvPop(17,17,3)">Rom 8:31<br>"What then"</div>
         <div id="mv16Pop" class="mvButton w16" onclick="mvPop(16,16,4)">Phil 2:10-11<br>"so that"</div>
         <div id="mv15Pop" class="mvButton w15" onclick="mvPop(15,15)">Phil 2:9<br>"therefore God"</div>
         <div id="mv14Pop" class="mvButton w14" onclick="mvPop(14,14)">Phil 2:8<br>"And being"</div>
