--- a/class/index.html
+++ b/class/index.html
@@ -207,21 +207,22 @@
       <label class="checkboxLabel"><input type="checkbox" id="check13" class="checkbox" onclick="toggleMissions(13)"/> John 11 / Phil 2:7</label><br>
       <label class="checkboxLabel"><input type="checkbox" id="check14" class="checkbox" onclick="toggleMissions(14)"/> John 12 / Phil 2:8</label><br>
       <label class="checkboxLabel"><input type="checkbox" id="check15" class="checkbox" onclick="toggleMissions(15)"/> John 13 / Phil 2:9</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check16" class="checkbox" onclick="toggleMissions(16)"/> John 14-15 / Phil 2:10-11</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check17" class="checkbox" onclick="toggleMissions(17)"/> John 16 / Rom 8:31-32</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check18" class="checkbox" onclick="toggleMissions(18)"/> John 17 / Rom 8:33</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check19" class="checkbox" onclick="toggleMissions(19)"/> John 18 / Rom 8:34</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check20" class="checkbox" onclick="toggleMissions(20)"/> John 19 / Rom 8:35</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check21" class="checkbox" onclick="toggleMissions(21)"/> John 20 / Rom 8:36</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check22" class="checkbox" onclick="toggleMissions(22)"/> John 21 / Rom 8:37</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check23" class="checkbox" onclick="toggleMissions(23)"/> John 10-21 Review / Rom 8:38-39</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check24" class="checkbox" onclick="toggleMissions(24)"/> Armor Intro / Eph 6:10-11/</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check25" class="checkbox" onclick="toggleMissions(25)"/> Belt / Eph 6:12</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check26" class="checkbox" onclick="toggleMissions(26)"/> Breastplate / Eph 6:13</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check27" class="checkbox" onclick="toggleMissions(27)"/> Shoes / Eph 6:14-15</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check28" class="checkbox" onclick="toggleMissions(28)"/> Shield / Eph 6:16</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check29" class="checkbox" onclick="toggleMissions(29)"/> Helmet / Eph 6:17</label><br>
-      <label class="checkboxLabel"><input type="checkbox" id="check30" class="checkbox" onclick="toggleMissions(30)"/> Sword / Eph 6:18</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check16" class="checkbox" onclick="toggleMissions(16)"/> John 14 / Phil 2:10-11</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check17" class="checkbox" onclick="toggleMissions(17)"/> John 15 / Phil 8:31</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check18" class="checkbox" onclick="toggleMissions(18)"/> John 16 / Rom 8:32</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check19" class="checkbox" onclick="toggleMissions(19)"/> John 17 / Rom 8:33</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check20" class="checkbox" onclick="toggleMissions(20)"/> John 18 / Rom 8:34</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check21" class="checkbox" onclick="toggleMissions(21)"/> John 19 / Rom 8:35</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check22" class="checkbox" onclick="toggleMissions(22)"/> John 20 / Rom 8:36</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check23" class="checkbox" onclick="toggleMissions(23)"/> John 21 / Rom 8:37</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check24" class="checkbox" onclick="toggleMissions(24)"/> John 10-21 Review / Rom 8:38-39</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check25" class="checkbox" onclick="toggleMissions(25)"/> Armor Intro / Eph 6:10-11/</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check26" class="checkbox" onclick="toggleMissions(26)"/> Belt / Eph 6:12</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check27" class="checkbox" onclick="toggleMissions(27)"/> Breastplate / Eph 6:13</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check28" class="checkbox" onclick="toggleMissions(28)"/> Shoes / Eph 6:14-15</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check29" class="checkbox" onclick="toggleMissions(29)"/> Shield / Eph 6:16</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check30" class="checkbox" onclick="toggleMissions(30)"/> Helmet / Eph 6:17</label><br>
+      <label class="checkboxLabel"><input type="checkbox" id="check31" class="checkbox" onclick="toggleMissions(31)"/> Sword / Eph 6:18</label><br>
     </div>
 </div>
 
@@ -753,21 +754,21 @@
     </div>
     <div id="asmvPopContainer">
       <div id="asPop">
-        <div id="as31Pop" class="asButton w31" onclick="asPop(30)">Sword</div>
-        <div id="as30Pop" class="asButton w30" onclick="asPop(29)">Helmet</div>
-        <div id="as29Pop" class="asButton w29" onclick="asPop(28)">Shield</div>
-        <div id="as28Pop" class="asButton w28" onclick="asPop(27)">Shoes</div>
-        <div id="as27Pop" class="asButton w27" onclick="asPop(26)">Breastplate</div>
-        <div id="as26Pop" class="asButton w26" onclick="asPop(25)">Belt</div>
-        <div id="as25Pop" class="asButton w25" onclick="asPop(24)">Armor Intro</div>
-        <div id="as24Pop" class="asButton w24" onclick="asPop(23,6)">John 10-21 Review</div>
-        <div id="as23Pop" class="asButton w23" onclick="asPop(22)">John 21</div>
-        <div id="as22Pop" class="asButton w22" onclick="asPop(21)">John 20</div>
-        <div id="as21Pop" class="asButton w21" onclick="asPop(20)">John 19</div>
-        <div id="as20Pop" class="asButton w20" onclick="asPop(19)">John 18</div>
-        <div id="as19Pop" class="asButton w19" onclick="asPop(18)">John 17</div>
-        <div id="as18Pop" class="asButton w18" onclick="asPop(17)">John 16</div>
-        <div id="as17Pop" class="asButton w17" onclick="asPop(16,3)">John 15</div>
+        <div id="as31Pop" class="asButton w31" onclick="asPop(31)">Sword</div>
+        <div id="as30Pop" class="asButton w30" onclick="asPop(30)">Helmet</div>
+        <div id="as29Pop" class="asButton w29" onclick="asPop(29)">Shield</div>
+        <div id="as28Pop" class="asButton w28" onclick="asPop(28)">Shoes</div>
+        <div id="as27Pop" class="asButton w27" onclick="asPop(27)">Breastplate</div>
+        <div id="as26Pop" class="asButton w26" onclick="asPop(26)">Belt</div>
+        <div id="as25Pop" class="asButton w25" onclick="asPop(25)">Armor Intro</div>
+        <div id="as24Pop" class="asButton w24" onclick="asPop(24,6)">John 10-21 Review</div>
+        <div id="as23Pop" class="asButton w23" onclick="asPop(23)">John 21</div>
+        <div id="as22Pop" class="asButton w22" onclick="asPop(22)">John 20</div>
+        <div id="as21Pop" class="asButton w21" onclick="asPop(21)">John 19</div>
+        <div id="as20Pop" class="asButton w20" onclick="asPop(20)">John 18</div>
+        <div id="as19Pop" class="asButton w19" onclick="asPop(19)">John 17</div>
+        <div id="as18Pop" class="asButton w18" onclick="asPop(18)">John 16</div>
+        <div id="as17Pop" class="asButton w17" onclick="asPop(17,3)">John 15</div>
         <div id="as16Pop" class="asButton w16" onclick="asPop(16,3)">John 14</div>
         <div id="as15Pop" class="asButton w15" onclick="asPop(15)">John 13</div>
         <div id="as14Pop" class="asButton w14" onclick="asPop(14)">John 12</div>
@@ -788,20 +789,20 @@
       </div>
       <div id="mvPop">
         <div id="mv32Pop" class="asmvButtonFill w31"></div>
-        <div id="mv31Pop" class="mvButton w31" onclick="mvPop(30,30)"> Eph 6:18<br>"praying at"</div>
-        <div id="mv30Pop" class="mvButton w30" onclick="mvPop(29,29)"> Eph 6:17<br>"and take"</div>
-        <div id="mv29Pop" class="mvButton w29" onclick="mvPop(28,28)"> Eph 6:16<br>"In all"</div>
-        <div id="mv28Pop" class="mvButton w28" onclick="mvPop(27,27,4)"> Eph 6:14-15<br>"Stand therefore"</div>
-        <div id="mv27Pop" class="mvButton w27" onclick="mvPop(26,26)"> Eph 6:13<br>"Therefore take"</div>
-        <div id="mv26Pop" class="mvButton w26" onclick="mvPop(25,25,4)"> Eph 6:12<br>"For we"</div>
-        <div id="mv25Pop" class="mvButton w25" onclick="mvPop(24,24,4)"> Eph 6:10-11<br>"Finally, be"</div>
-        <div id="mv24Pop" class="mvButton w24" onclick="mvPop(23,23,6)">Rom 8:38-39<br>"For I"</div>
-        <div id="mv23Pop" class="mvButton w23" onclick="mvPop(22,22)">Rom 8:37<br>"No, in"</div>
-        <div id="mv22Pop" class="mvButton w22" onclick="mvPop(21,21)">Rom 8:36<br>"As it"</div>
-        <div id="mv21Pop" class="mvButton w21" onclick="mvPop(20,20)">Rom 8:35<br>"Who shall separate"</div>
-        <div id="mv20Pop" class="mvButton w20" onclick="mvPop(19,19,4)">Rom 8:34<br>"Who is"</div>
-        <div id="mv19Pop" class="mvButton w19" onclick="mvPop(18,18)">Rom 8:33<br>"Who shall bring"</div>
-        <div id="mv18Pop" class="mvButton w18" onclick="mvPop(17,17,4)">Rom 8:32<br>"What then"</div>
+        <div id="mv31Pop" class="mvButton w31" onclick="mvPop(31,31)"> Eph 6:18<br>"praying at"</div>
+        <div id="mv30Pop" class="mvButton w30" onclick="mvPop(30,30)"> Eph 6:17<br>"and take"</div>
+        <div id="mv29Pop" class="mvButton w29" onclick="mvPop(29,29)"> Eph 6:16<br>"In all"</div>
+        <div id="mv28Pop" class="mvButton w28" onclick="mvPop(28,28,4)"> Eph 6:14-15<br>"Stand therefore"</div>
+        <div id="mv27Pop" class="mvButton w27" onclick="mvPop(27,27)"> Eph 6:13<br>"Therefore take"</div>
+        <div id="mv26Pop" class="mvButton w26" onclick="mvPop(26,26,4)"> Eph 6:12<br>"For we"</div>
+        <div id="mv25Pop" class="mvButton w25" onclick="mvPop(25,25,4)"> Eph 6:10-11<br>"Finally, be"</div>
+        <div id="mv24Pop" class="mvButton w24" onclick="mvPop(24,24,6)">Rom 8:38-39<br>"For I"</div>
+        <div id="mv23Pop" class="mvButton w23" onclick="mvPop(23,23)">Rom 8:37<br>"No, in"</div>
+        <div id="mv22Pop" class="mvButton w22" onclick="mvPop(22,22)">Rom 8:36<br>"As it"</div>
+        <div id="mv21Pop" class="mvButton w21" onclick="mvPop(21,21)">Rom 8:35<br>"Who shall separate"</div>
+        <div id="mv20Pop" class="mvButton w20" onclick="mvPop(20,20,4)">Rom 8:34<br>"Who is"</div>
+        <div id="mv19Pop" class="mvButton w19" onclick="mvPop(19,18)">Rom 8:33<br>"Who shall bring"</div>
+        <div id="mv18Pop" class="mvButton w18" onclick="mvPop(18,18,4)">Rom 8:32<br>"What then"</div>
         <div id="mv17Pop" class="mvButton w17" onclick="mvPop(17,17,3)">Rom 8:31<br>"What then"</div>
         <div id="mv16Pop" class="mvButton w16" onclick="mvPop(16,16,4)">Phil 2:10-11<br>"so that"</div>
         <div id="mv15Pop" class="mvButton w15" onclick="mvPop(15,15)">Phil 2:9<br>"therefore God"</div>
