--- a/class/index.html
+++ b/class/index.html
@@ -706,8 +706,8 @@
 <div id="missionsPop" class="pop">
     <div id="asmvHeaderContainer">
       <div class="asmvHeader">ACTIVITY SHEETS</div>
-      <div class="secretButton" onclick="pop(['studentPop','missionsPop'],['missionVisibilityPop'])"></div>
-      <div class="asmvHeader" onclick="toggleIncomplete()">MEMORY VERSES</div>
+      <div class="secretButton" onclick="toggleIncomplete()"></div>
+      <div class="asmvHeader">MEMORY VERSES</div>
     </div>
     <div id="asmvPopContainer">
       <div id="asPop"></div>
