--- a/class/index.html
+++ b/class/index.html
@@ -610,7 +610,7 @@
     </div>
     <div class="optionButtonContainer">
       <div class="roundButton1 cancelButton" onclick="pop(['editStudentPop'],[_array]); clearStudentFields(); resetStudentMenu();">X</div>
-      <div class="roundButton deleteButton" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
+      <div class="roundButton1 deleteButton" id="deleteStudentButton" onclick="actionAlert('Are you sure you want to delete this student?',['editStudentPop'],deleteStudent)">U</div>
       <div class="roundButton1 okButton" id="editStudentOkButton" onclick="editStudent()">V</div>
     </div>
     <div id="dispStudentPhoto" onclick="photoLinks()"></div>
@@ -655,7 +655,7 @@
   <textarea id="editStudentNote" rows="10" cols="30" onkeydown="if(event.keyCode==13)document.getElementById('editStudentNoteOkButton').click()"></textarea>
   <div class="optionButtonContainer">
     <div class="roundButton1 cancelButton" onclick="pop(['editStudentNotePop','editStudentNote'],['studentNotesPop','studentNotesList'])">X</div>
-    <div class="roundButton deleteButton" id="deleteNoteButton" onclick="actionAlert('Are you sure you want to delete this note?',['editStudentNotePop'],deleteNote)">U</div>
+    <div class="roundButton1 deleteButton" id="deleteNoteButton" onclick="actionAlert('Are you sure you want to delete this note?',['editStudentNotePop'],deleteNote)">U</div>
     <div class="roundButton1 okButton" id="editStudentNoteOkButton" onclick="editStudentNote()">V</div>
   </div>
 </div>
@@ -668,7 +668,7 @@
   <textarea id="editTeacherNote" rows="10" cols="30" onkeydown="if(event.keyCode==13)document.getElementById('editTeacherNoteOkButton').click()"></textarea>
   <div class="optionButtonContainer">
     <div class="roundButton1 cancelButton" onclick="pop(['editTeacherNotePop','editTeacherNote'],['teacherNotesPop','teacherNotesList'])">X</div>
-    <div class="roundButton deleteButton" id="deleteTeacherNoteButton" onclick="actionAlert('Are you sure you want to delete this note?',['editTeacherNotePop'],deleteTeacherNote)">U</div>
+    <div class="roundButton1 deleteButton" id="deleteTeacherNoteButton" onclick="actionAlert('Are you sure you want to delete this note?',['editTeacherNotePop'],deleteTeacherNote)">U</div>
     <div class="roundButton1 okButton" id="editTeacherNoteOkButton" onclick="editTeacherNote()">V</div>
   </div>
 </div>
